# Freee

./: LICENSE  README.md  __init__.py  app.py  human_resource.py  pyproject.toml  requirements.txt  setup.py  test_method.py
Freee/: __init__.py  human_resource.py
Freee/freee_enums/: app.py
Freee/freee_sdk/: base_client.py  freee_response.py
Freee/freee_sdk/errors/: __init__.py
Freee/freee_sdk/oauth/: __init__.py  oauth_flow.py
Freee/freee_sdk/oauth/authorize_url_generator/: __init__.py
Freee/freee_sdk/utils/: __init__.py  internal_utils.py
_freee_sdk/: base_client.py
_freee_sdk/oauth/: freee_oauth.py  oauth.py
doc/human_resource/v1/: json_to_method.py  reference_parse.py
doc/human_resource/v1/IF/delete/: destroy_approval_requests_overtime_work.json  destroy_approval_requests_paid_holiday.json  destroy_approval_requests_special_holiday.json  destroy_employee.json  destroy_employee_work_record.json
doc/human_resource/v1/IF/get/: get_approval_requests_monthly_attendances.json  get_approval_requests_overtime_work.json  get_approval_requests_overtime_works.json  get_approval_requests_paid_holiday.json  get_approval_requests_special_holiday.json  get_approval_requests_special_holidays.json  get_bonuses_employee_payroll_statements.json  get_employee.json  (+13 more)
doc/human_resoursce/v1/: reference_search.py
examples/fastapi/: app.py
freee_enums/: __init__.py  human_resource.py
freee_sdk/: base_client.py  freee_response.py  outh.py  t.py
freee_sdk/errors/: __init__.py
freee_sdk/oauth/: oauth_flow.py
freee_sdk/utils/: __init__.py  internal_utils.py
(+63 files in other folders)
